--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
                                                      RUN.ID</a>
                                                   </div>
                                                 <div>
-                                                    <a href="https://api.whatsapp.com/send/?phone=6282111920101&text&type=phone_number&app_absent=0" class="btn btn"
+                                                    <a href="https://linktr.ee/yakesma_etb" class="btn btn"
                                                         style=" margin-top: 1px; margin-left: 1px ; color: black; font-weight: bold; text-align: left;">
                                                         NOMOR WHATSAPP KONFIRMASI</a>
+                                                </div>
+
+                                                <div>
+                                                    <a href="https://drive.google.com/drive/folders/1qTSMldtw_VDQIjxS-DhpiDsTuJPS7VB-?usp=sharing" class="btn btn" style="margin-top: 1px; margin-left: 1px ; color: black; font-weight: bold; text-align: left;">
+                                                        LINK FORMULIR PENDAFTARAN </a>
                                                 </div>
                                             </li>
                                           
@@ -158,40 +163,61 @@
                     <h4 style="text-align: center; margin-top: 2px; font-weight: bold; font-size: larger; color: rgb(39, 242, 45, 0.8) ; display: block; pointer-events: none; align-items: center;">PESERTA FULLY FUNDED</h4>
                     
                     <p style="font-size: medium; text-align: justify; margin-top: 1px; color: rgb(0, 0, 0); font-weight: bold; margin-left: 10px;">1.	WNI berdomisili atau beralamat KTP Kota Tangerang. <br> <br>
-2.	Muslim atau Muslimah usia 18 sampai 35 tahun. <br> <br>
-3.	Bisa membaca dan memahami Al-Quran. <br> <br>
-4.	Diutamakan hafal juz 30. <br><br>
-5.	Tidak merokok, tidak bertato dan tidak bertindik (kecuali anting untuk perempuan). <br> <br>
-6.	Siap menjadi member RUN Indonesia dan berkhidmat <br> di Yakesma Kota Tangerang sesuai jangka kontrak program. <br> <br>
-7.	Sanggup mematuhi aturan program utama. <br> <br>
-8.	Mendaftarkan diri dan lolos seleksi pendaftaran program. <br><br>
-9. Mengumpulkan berkas-berkas administratif sebagai berikut: <br>
-- Mengisi Formulir online RUN.ID <br>
-- Formulir Pernyataan Pendaftaran seleksi Fully Funded. <br>
-- Formulir Pendaftaran Anggota RUN.ID <br>
-- FC KTP / KK.<br>
-- FC Sertifikat hafalan quran ( jika ada).
+                    2.	Muslim atau Muslimah usia 18 sampai 35 tahun. <br> <br>
+                    3.	Bisa membaca dan memahami Al-Quran. <br> <br>
+                    4.	Diutamakan hafal Juz 30. <br><br>
+                    5.	Tidak merokok, tidak bertato dan tidak bertindik (kecuali anting untuk perempuan). <br> <br>
+                    6.	Siap menjadi member RUN Indonesia dan berkhidmat <br> di Yakesma Kota Tangerang sesuai jangka kontrak program. <br> <br>
+                    7.	Sanggup mematuhi aturan program utama. <br> <br>
+                    8.	Mendaftarkan diri dan lolos seleksi pendaftaran program. <br><br>
+                    9. Mengumpulkan berkas-berkas administratif sebagai berikut: <br>
+                        - Mengisi Formulir online RUN.ID <br>
+                        - Print Formulir Pernyataan Pendaftaran seleksi Fully Funded. <br>
+                        - Print Formulir Pendaftaran Anggota RUN.ID <br>
+                        - FOTOCOPY KTP / KK.<br>
+                        - FC Sertifikat hafalan Quran (jika ada).
 
 </p>
                   </div>
                 </div>
 
-                <div>
+                <div style="border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
                     <h5
                     style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
                     TIMELINE KEGIATAN</h5>
+                    <div style="border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); ">
                     <h4
-                    style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
-                    UNDER CONSTRUCTION</h4>
+                    style="text-align: left; margin-top: 2px; font-weight: bold; font-size: medium; display: block; pointer-events: none; margin-left: 10px;">
+                    01-10 Oktober 2024 -> Sosialisasi Kegiatan EduTrip Baduy. <br>
+                    01-17 Oktober 2024 -> Pendaftaran Jalur Fully Funded dan submit berkas pendaftaran. <br>
+                    18-20 Oktober 2024 -> Interview online pendaftar Fully Funded. <br>
+                    21 Oktober 2024 -> Pengumuman hasil seleksi Interview Fully Funded. <br>
+                    22 Oktober 2024 -> Masa susulan seleksi Exclusive Funded. <br>
+                    24 Oktober 2024 -> Pengumuman seleksi & Technical Meeting Hybrid. <br>
+                    25 Oktober 2024 -> Meeting Point jam 18.00 dikantor Yakesma Kota Tangerang. <br>
+                    25-27 Oktober 2024 -> Rangkaian kegiatan EDU TRIP. <br> <br>
+                    (khusus pendaftar SELF FUNDED, akan otomatis terdaftar <br> sebagai peserta setelah melakukan pembayaran biaya kegiatan)
+                   </h4>
+                  </div>
                 </div>
 
                 <div>
                     <h5
                         style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
-                        DONASI UNTUK ANAK MUALAF</h5>
+                       BIAYA KEGIATAN</h5>
+                       <div style="border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3);">
                     <h4
-                        style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
-                        UNDER CONSTRUCTION</h4>
+                        style="text-align: center; margin-top: 2px; font-weight: bold; font-size: larger; color: rgb(39, 242, 45, 0.8) ; display: block; pointer-events: none; align-items: center;">
+                        BIAYA POKOK PESERTA</h4>
+                        <p style="font-size: medium; text-align: justify; margin-top: 1px; color: rgb(0, 0, 0); font-weight: bold; margin-left: 10px;"> Rp.300.000,- Sudah termasuk biaya fasilitas pokok seperti: <br> - Transportasi (Tangerang-Lebak PP). <br>
+                        - Pelatihan Kerelawanan. <br>
+                        - Makan selama kegiatan. <br>
+                        - Rumah singgah Baduy dalam. <br>
+                        - Guide Lokal. <br>
+                        - Kaos peserta. <br> </p>
+                    <h4 style="text-align: center; margin-top: 2px; font-weight: bold; font-size: larger; color: rgb(39, 242, 45, 0.8) ; display: block; pointer-events: none; align-items: center;">BIAYA DONASI SOSIAL</h4>
+                    <p style="font-size: medium; text-align: justify; margin-top: 1px; color: rgb(0, 0, 0); font-weight: bold; margin-left: 10px;"> Untuk Biaya Donasi Sosial ada berupa Paket Bingkisan(*) seharga Rp.200.000,- (Sukarela). <br> <br> Note: <br> -Biaya Kegiatan Wajib bagi peserta Fully Funded dan Donasi bersifat Sukarela. <br> -Paket Bingkisan berisi Juz Amma, Iqro dan Sembako untuk Anak-anak Baduy. <br> -Setelah melakukan pembayaran ke Rekening kami harap konfirmasi ke Admin via WA.</p>
+                       </div>
                 </div>
 
                 <div>
@@ -200,7 +226,14 @@
                         TATA CARA PENDAFTARAN <br> FULLY FUNDED</h5>
                     <h4
                         style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
-                        UNDER CONSTRUCTION</h4>
+                        1. Mengisi form online di link PENDAFTARAN RUN.ID di Navbar. <br><br>
+                        2. Download & print surat pernyataan pendaftaran di link drive Navbar. <br><br>
+                        3. Follow Instagram Yakesma TNG, komentar di poster kegiatan dengan mention minimal 3 nama untuk diajak. <br><br>
+                        4. Repost poster kegiatan di akun Instagram kalian dengan <br> tag @yakesmatng. <br><br>
+                        5. Subscribe Youtube Channel Official Yakesma Kota Tangerang. <br> <br>
+                        6. Konfirmasi pendaftaran via WA ke Admin di Navbar dengan format = NAMA_KEC_DAFTAR EDUTRIP BADUY. <br><br>
+                        7. Peserta terpilih akan dimasukkan ke dalam group WA. <br> <br>
+                        8. Selanjutnya ikuti petunjuk informasi dalam group.</h4>
                 </div>
             </section>
     <!-- KOLOM SCROLL -->
