--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                     <h4
                         style="text-align: center; margin-top: 2px; font-weight: bold; font-size: larger; color: rgb(39, 242, 45, 0.8) ; display: block; pointer-events: none; align-items: center;">
                         PESERTA UMUM <br> </h4>
-                    <p style="font-size: medium; text-align: justify; margin-top: 1px; margin-left: 10px; color: rgb(0, 0, 0); font-weight: bold; ">1. Kegiatan SocioTrip terbuka untuk masyarakat umum lintas <br> disiplin ilmu dengan batasan usia minimal 15 tahun. <br> <br>
-                       2. Memiliki kemauan dan semangat untuk mengabdi serta <br> mengembangkan potensi lokal daerah  dan loyalitas yang tinggi. <br> <br>
+                    <p style="font-size: medium; text-align: justify; margin-top: 1px; margin-left: 10px; color: rgb(0, 0, 0); font-weight: bold; ">1. Kegiatan SocioTrip terbuka untuk masyarakat umum lintas disiplin ilmu dengan batasan <br> usia minimal 15 tahun. <br> <br>
+                       2. Memiliki kemauan dan semangat untuk mengabdi serta mengembangkan potensi lokal daerah <br> dan loyalitas yang tinggi. <br> <br>
                        3. Sehat secara Jasmani dan Rohani. <br><br>
                        4. Taat terhadap Pancasila dan UUD 45. <br> <br>
                        5. Mengumpulkan berkas administratif.</p>
@@ -161,7 +161,7 @@
                     3.	Bisa membaca dan memahami Al-Quran. <br> <br>
                     4.	Diutamakan hafal Juz 30. <br><br>
                     5.	Tidak merokok, tidak bertato dan tidak bertindik <br> (kecuali anting untuk perempuan). <br> <br>
-                    6.	Siap menjadi member RUN Indonesia dan berkhidmat <br> di Yakesma Kota Tangerang sesuai jangka kontrak program. <br> <br>
+                    6.	Siap menjadi member RUN Indonesia dan berkhidmat di Yakesma Kota Tangerang <br> sesuai jangka kontrak program. <br> <br>
                     7.	Sanggup mematuhi aturan program utama. <br> <br>
                     8.	Mendaftarkan diri dan lolos seleksi pendaftaran program. <br><br>
                     9. Mengumpulkan berkas-berkas administratif sebagai berikut: <br>
@@ -183,14 +183,14 @@
                     <h4
                     style="text-align: left; margin-top: 2px; font-weight: bold; font-size: medium; display: block; pointer-events: none; margin-left: 10px;">
                     01-10 Oktober 2024 -> Sosialisasi Kegiatan EduTrip Baduy. <br> <br>
-                    01-17 Oktober 2024 -> Pendaftaran Jalur Fully Funded  <br> dan submit berkas pendaftaran. <br> <br>
+                    01-17 Oktober 2024 -> Pendaftaran Jalur Fully Funded dan submit berkas pendaftaran. <br> <br>
                     18-20 Oktober 2024 -> Interview online pendaftar Fully Funded. <br> <br>
                     21 Oktober 2024 -> Pengumuman hasil seleksi Interview Fully Funded. <br> <br>
                     22 Oktober 2024 -> Masa susulan seleksi Exclusive Funded. <br> <br>
                     24 Oktober 2024 -> Pengumuman seleksi & Technical Meeting Hybrid. <br> <br>
                     25 Oktober 2024 -> Meeting Point jam 18.00 <br> dikantor Yakesma Kota Tangerang. <br> <br>
                     25-27 Oktober 2024 -> Rangkaian kegiatan EDU TRIP. <br> <br>
-                    (khusus pendaftar SELF FUNDED, akan otomatis terdaftar <br> sebagai peserta setelah melakukan pembayaran biaya kegiatan)
+                    (khusus pendaftar SELF FUNDED, akan otomatis terdaftar sebagai peserta setelah melakukan pembayaran biaya kegiatan)
                    </h4>
                   </div>
                 </div>
