--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
     <h1
         style="color: rgb(248, 248, 0); background-color: rgb(0, 0, 0, 0.7); text-align: center; border: 2px solid rgb(249, 255, 249);">
-        EDU TRIP BADUY
-        YAKESMA KOTA TANGERANG</h1>
+        EDU TRIP BADUY YAKESMA KOTA TANGERANG</h1>
 
     <section
         style="background-image: url(Images/logo_opacity.png); background-repeat: no-repeat; background-size: cover; background-position: center;">
